--- a/index.html
+++ b/index.html
@@ -1,15 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Light Dark Mode</title>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/a3e039af02.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="theme-switch-wrapper">
+      <span id="toogle-icon">
+        <span id="toogle-text">Light mode</span>
+        <i class="fas fa-sun"></i>
+      </span>
+      <label class="theme-switch">
+        <input type="checkbox" />
+        <div class="slider round"></div>
+      </label>
+    </div>
+    <nav id="nav">
+      <a href="#home">HOME</a>
+      <a href="#about">ABOUT</a>
+      <a href="#projects">PROJECTS</a>
+      <a href="#contacts">CONTACT</a>
+    </nav>
+    <section id="home">
+      <div class="title-group">
+        <h1>Title</h1>
+        <h2>Welcome!</h2>
+      </div>
+    </section>
+    <section id="about">
+      <h1>About</h1>
+      <div class="about-container">
+        <div class="image-container">
+          <h2>Web Inovation</h2>
+          <img
+            src="img/undraw_proud_coder_light.svg"
+            alt="Proud Coder"
+            id="image1"
+          />
+        </div>
+        <div class="image-container">
+          <h2>Problem Solving</h2>
+          <img
+            src="img/undraw_feeling_proud_light.svg"
+            alt="Proud Coder"
+            id="image1"
+          />
+        </div>
+        <div class="image-container">
+          <h2>High Concept</h2>
+          <img
+            src="img/undraw_conceptual_idea_light.svg"
+            alt="Proud Coder"
+            id="image1"
+          />
+        </div>
+      </div>
+    </section>
+    <section id="projects">
+      <h1>Buttons</h1>
+      <div class="buttons">
+        <button class="primary">primary</button>
+        <button class="secondary">Secondary</button>
+        <button class="primary" disabled>Disabled</button>
+        <button class="outline">outline</button>
+        <button class="secondary outline">Alt Outline</button>
+        <button class="outline" disabled>Disabled</button>
+      </div>
+      <div class="text-box" id="text-box">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ad eius
+          nihil assumenda dignissimos. Iste commodi non saepe nostrum expedita
+          hic? Alias impedit explicabo sed ipsa ab rem repellendus dolorem?
+        </p>
+      </div>
+    </section>
+    <section id="contacts">
+      <div class="social-icons">
+        <i class="fab fa-brands fa-github"></i>
+
+        <i class="fab fa-brands fa-linkedin"></i>
+        <i class="fab fa-brands fa-medium"></i>
+      </div>
+    </section>
     <!-- Script -->
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
